<resources>

    <string name="app_name">ASK Sample</string>
    <string name="action_settings">Settings</string>
    <string name="basics">Basics</string>
    <string name="power">Power</string>
    <string name="open">Open</string>
    <string name="fw_version">FW Version</string>
    <string name="card_detection">Card detection</string>
    <string name="discovery">Discovery</string>
    <string name="communication_mode">Communication Mode:</string>
    <string name="atr">ATR:</string>
    <string name="card_detection_started">Card detection started</string>
    <string name="card_detection_stopped">Card detection stopped</string>
    <string name="sam">SAM</string>
    <string name="sam_1">SAM 1</string>
    <string name="sam_2">SAM 2</string>
    <string name="get_atr">Get ATR</string>
    <string name="iso_7816_t0">ISO 7816 T=0</string>
    <string name="iso_7816_t1">ISO 7816 T=1</string>
    <string name="hsp_innovatron">HSP Innovatron</string>
    <string name="error_selecting_sam">Error selecting SAM</string>
    <string name="error_resetting_sam">Error resetting SAM</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ASK Sample</string>
    <string name="nav_header_subtitle">developer.coppernic.fr</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_settings">Settings</string>
</resources>
